--- a/website/index.html
+++ b/website/index.html
@@ -481,7 +481,7 @@
                 <li><a href="#quickstart">快速开始</a></li>
             </ul>
             <div class="nav-cta">
-                <a href="https://github.com/sauos/sauos" class="btn btn-outline github-btn" target="_blank">
+                <a href="https://github.com/wwwsauoscom/sauos-aient" class="btn btn-outline github-btn" target="_blank">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                     GitHub
                 </a>
@@ -506,7 +506,7 @@
             </p>
             <div class="hero-buttons">
                 <a href="#quickstart" class="btn btn-primary">开始使用</a>
-                <a href="https://github.com/sauos/sauos" class="btn btn-outline github-btn" target="_blank">
+                <a href="https://github.com/wwwsauoscom/sauos-aient" class="btn btn-outline github-btn" target="_blank">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                     查看源码
                 </a>
@@ -658,8 +658,8 @@
                 </div>
                 <div class="code-content">
                     <span class="code-comment"># 1. 克隆项目</span><br>
-                    <span class="code-command">git clone</span> https://github.com/sauos/sauos.git<br>
-                    <span class="code-command">cd</span> sauos<br><br>
+                    <span class="code-command">git clone</span> https://github.com/wwwsauoscom/sauos-aient.git<br>
+                    <span class="code-command">cd</span> sauos-aient<br><br>
                     
                     <span class="code-comment"># 2. 安装依赖</span><br>
                     <span class="code-command">pip install</span> -r requirements.txt<br><br>
@@ -681,7 +681,7 @@
                     SAUOS 采用 MIT 协议开源，欢迎社区贡献代码、提交Issue、分享使用经验。<br>
                     让我们一起打造最好用的AI自动化工具。
                 </p>
-                <a href="https://github.com/sauos/sauos" class="btn btn-primary github-btn" target="_blank">
+                <a href="https://github.com/wwwsauoscom/sauos-aient" class="btn btn-primary github-btn" target="_blank">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                     Star on GitHub
                 </a>
@@ -708,7 +708,7 @@
         <div class="container">
             <p>
                 SAUOS - Screen Automation Universal Operating System<br>
-                <a href="https://github.com/sauos/sauos" target="_blank">GitHub</a> · 
+                <a href="https://github.com/wwwsauoscom/sauos-aient" target="_blank">GitHub</a> · 
                 <a href="#quickstart">文档</a> · 
                 MIT License
             </p>
